html/stylesheets/src/layouts/_home.scss
.layout-home{
  background-color: #25002b;
  background-image: 
    url(../images/cloud-small-light.svg),
    url(../images/cloud-medium-light.svg),
    url(../images/cloud-big-light.svg),          
    url(../images/moon.svg),
    -webkit-radial-gradient( 120px 120px, 1000px 1000px, #90552e, #90552e 9%, #8b4f2a 9%,#8b4f2a 16%,   #854a2a 16%,#854a2a 23%,   #7d4429 23%,#7d4429 30%,   #773e2a 30%,#773e2a 37%,#70382b 37%,#70382b 44%,#68312a 44%,#68312a 51%,#5f2c29 51%,#5f2c29 58%,#58252a 58%,#58252a 65%,#4e1e2a 65%,#4e1e2a 72%,#46172b 72%,#46172b 79%,#3b102b 79%,#3b102b 86%,    #30082a 86%,#30082a 93%,#25002b);
  background-image: 
    url(../images/cloud-small-light.svg),
    url(../images/cloud-medium-light.svg),
    url(../images/cloud-big-light.svg),          
    url(../images/moon.svg),
    -moz-radial-gradient( 120px 120px, circle closest-side,  #8b4f2a 9%,#8b4f2a 16%,   #854a2a 16%,#854a2a 23%,   #7d4429 23%,#7d4429 30%,   #773e2a 30%,#773e2a 37%,#70382b 37%,#70382b 44%,#68312a 44%,#68312a 51%,#5f2c29 51%,#5f2c29 58%,#58252a 58%,#58252a 65%,#4e1e2a 65%,#4e1e2a 72%,#46172b 72%,#46172b 79%,#3b102b 79%,#3b102b 86%,    #30082a 86%,#30082a 93%,#25002b);
  background-image: 
    url(../images/cloud-small-light.svg),
    url(../images/cloud-medium-light.svg),
    url(../images/cloud-big-light.svg),          
    url(../images/moon.svg),  
    -ms-radial-gradient( 120px 120px, 1000px 1000px, #8b4f2a 9%,#8b4f2a 16%,   #854a2a 16%,#854a2a 23%,   #7d4429 23%,#7d4429 30%,   #773e2a 30%,#773e2a 37%,#70382b 37%,#70382b 44%,#68312a 44%,#68312a 51%,#5f2c29 51%,#5f2c29 58%,#58252a 58%,#58252a 65%,#4e1e2a 65%,#4e1e2a 72%,#46172b 72%,#46172b 79%,#3b102b 79%,#3b102b 86%,    #30082a 86%,#30082a 93%,#25002b);  
  background-image: 
    url(../images/cloud-small-light.svg),
    url(../images/cloud-medium-light.svg),
    url(../images/cloud-big-light.svg),          
    url(../images/moon.svg),  
    radial-gradient( 1000px circle at 120px 120px, #8b4f2a 9%,#8b4f2a 16%,   #854a2a 16%,#854a2a 23%,   #7d4429 23%,#7d4429 30%,   #773e2a 30%,#773e2a 37%,#70382b 37%,#70382b 44%,#68312a 44%,#68312a 51%,#5f2c29 51%,#5f2c29 58%,#58252a 58%,#58252a 65%,#4e1e2a 65%,#4e1e2a 72%,#46172b 72%,#46172b 79%,#3b102b 79%,#3b102b 86%,    #30082a 86%,#30082a 93%,#25002b);

  background-repeat: no-repeat;
  background-size: auto auto, auto auto, auto auto, auto auto, 100% 100%;
  text-align: center;
  background-position: 
    20% 115px,          
    5% 185px,    
    -50px -30px,
    (120px - (60/2)) (120px - (70/2)), 
    0 0;
}

.layout-home:after{
  content: "ab";
  position: absolute;
  top: 0;
  right: 0;
  pointer-events: none;
  background-image:
    url(../images/cloud-small-dark.svg),
    url(../images/cloud-medium-dark.svg),
    url(../images/cloud-big-dark.svg);
  background-position:
    30% 20px,
    70% 120px,  
    100% -25px
  ;
  
  background-repeat: no-repeat;  
  
  width: 50%;
  height: 200px;
  z-index: 1000;
}

.layout-home{
  
  .page{
    max-width: 650px;
    margin: 0 auto;
    text-align: left;
    position: relative;
/*    visibility:hidden;*/
  }
  
  .main > header{
    padding-top: 10px;
    margin: 0 -20px 0 -20px;
  }
  
  .no-flexbox & .main > header{
    padding-top: 10px+28px;
  }
  
  .no-flexbox & .banner {
    top: 0;
  }
  
  .main > .body,
  .main > .footer{
    background: $c_main_body_bg;
    padding: 20px;    
  }
    
  /* =========== */
  /* = Sharing = */
  /* =========== */
  
  .share{
    position: relative;
    @extend %autoclear;  
    padding: 1rem;
    z-index: 1;
  }
  
  .share .buttons{
    float: left;
    width: 140px;
  }
  
  .share > p{
    @extend %font-share;
    float: left;
    margin-right: 1em;
    line-height: 16px; /* Height of the share buttons */
  }
  
  /* =========================== */
  /* = The alien and it's beam = */
  /* =========================== */
  
  $alien_position_right: 30%;
  $alien_beam_height: 90px;
  
  .main > .alien{
    position: absolute;
    margin-top: -30px;
    right: -webkit-calc(30% - 60px);
    right: -moz-calc(30% - 60px);
    right: calc(30% - 60px);        
    z-index: 1;
  }

  .main > .body{
    position: relative;
    margin-top: $alien_beam_height - 25px;
  }
  
  /* The light cone */
  .main > .body:before,
  .main > .body:after{
    content: "";
    position: absolute;
    top: -1 * $alien_beam_height;
    height: $alien_beam_height;    
  }

  .main > .body:before{
    left: 0;
    width: 100% - $alien_position_right; 
    background: inline_image("/images/alien-ray-left.svg") no-repeat;
    background-position: 100% 100%;
    background-size: 100% 100%;
  }
  
  .main > .body:after{
    right: 0;
    width: $alien_position_right;
    background: inline_image("/images/alien-ray-right.svg") no-repeat;
    background-position: 100% 100%;
    background-size: 100% 100%;    
  }
  
  /* ============= */
  /* = Countdown = */
  /* ============= */
  
  .countdown{
    @extend %font-countdown;
    color: $c_corporate_dark;
    background: $c_main_highlight_bg;
    padding: 0.5em;
    margin-bottom: 3rem;
  }
  
  .countdown strong{
    color: $c_ribbon_banner_strong;
  }
  
  
}

@media($mq_mobile){
  .layout-home{
    
    .main > .alien{
      margin-top: -10px
    }
    
    .main > .body {
      margin-top: 90px + 25px;
    }
    
    .main > header{
      margin-top: 0;
      margin-left: 0;
      margin-right: 0;
    }
    
    
    .share{
      display: block;
      position: static;
    }
    
  }
}

